[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rst2pdf"
authors = [
    {name = "rst2pdf maintainers", email = "maintainers@rstpdf.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "docutils>=0.21.2",
    "jinja2~=3.0",
    "packaging~=25.0",
    "pygments~=2.0",
    "pyyaml>=6.0.1",
    "reportlab~=4.0",
]
description = "Convert reStructured Text to PDF via ReportLab."
dynamic = ["version"]
keywords= [
    "convert",
    "docutils",
    "pdf",
    "pygments",
    "reportlab'",
    "restructured",
    "rst",
]
license = {file = "LICENSE.txt"}
readme = "README.rst"
requires-python = ">=3.10"

[project.optional-dependencies]
aafiguresupport = ["aafigure"]
mathsupport = ["matplotlib"]
plantumlsupport = ["plantuml"]
rawhtmlsupport = ["xhtml2pdf"]
sphinx = [
    "sphinx>7.3; python_version=='3.10'",
    "sphinx>=8.2; python_version>='3.11'",
]
svgsupport = ["svglib"]

[project.scripts]
rst2pdf = "rst2pdf.createpdf:main"

[project.urls]
Homepage = "https://rst2pdf.org"
Changelog = "https://github.com/rst2pdf/rst2pdf/blob/master/CHANGES.rst"
Releases = "https://github.com/rst2pdf/rst2pdf/releases"
Source = "https://github.com/rst2pdf/rst2pdf"
"Bug Reports" = "https://github.com/rst2pdf/rst2pdf/issues"

[tool.uv]
required-version = ">=0.5.21"
cache-keys = [{ git = { commit = true, tags = true } }]

[tool.black]
line-length = 88
target-version = ['py36']
skip-string-normalization = true
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | build
    | dist
  )/
  | tests/input
)
'''

[tool.setuptools]
packages = ["rst2pdf"]
 # FIXME: this is a workaround; see:
 #   - https://github.com/astral-sh/uv/issues/9513
 #   - https://github.com/pypa/setuptools/issues/4759
 license-files = []

[tool.setuptools_scm]
# Presence of the [tool.setuptools_scm] table enables setuptools-scm


[dependency-groups]
dev = [
    "flake8>=5.0.4",
    "pymupdf~=1.0",
    "pytest-xdist~=3.0",
    "pytest~=8.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sys.*",  # see https://github.com/swig/swig/issues/2881
    "ignore::DeprecationWarning:importlib.*",  # see https://github.com/swig/swig/issues/2881
#    "default::DeprecationWarning:rst2pdf.*:",  # except from rst2pdf
]
